# verify-bounds

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PROJECT_README.md  README.md  add.cpp  div-check.cpp  mul.cpp  sub.cpp  vcpkg.json
bugs/: mod-check.cpp  shift_left-check.cpp  shift_right-check.cpp
checks/: add.cpp  bitwise_and.cpp  bitwise_not.cpp  bitwise_or.cpp  boolean_and.cpp  boolean_not.cpp  boolean_or.cpp  div-check.cpp  div.cpp  eq.cpp  geq.cpp  gt.cpp  leq.cpp  lt.cpp  max.cpp  min.cpp  mod.cpp  mul.cpp  neq.cpp  select.cpp  shift_left.cpp  shift_right.cpp  sub.cpp  z3-check.cpp
coq/: Interval.v  Makefile
include/: Bound.h  Check.h  Equality.h  Interval.h  Operations.h
src/: Bound.cpp  Check.cpp  Interval.cpp  Operations.cpp
